--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,20 +2,26 @@
     <div class="row">
         <h1>Minoan Website</h1>
     </div>
-    <div class="row mb-2">
-        <div class="col-2">
-            <p>Spaces</p>    
-        </div>
-        <div class="col-2">
-            <p>Brands</p>    
-        </div>
+    <div class="row mb-2 navRow">
+        <ul>
+            <li class="nav-item active">
+                <a class="nav-link">Spaces</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link">Brands</a>
+            </li>
+            <li class="nav-item" style="float: right;">
+                <button class="btn" (click)="openAddSpaces(addSpacesModal)"><i class="fa fa-plus"></i> &nbsp;Add Spaces</button>
+            </li>
+        </ul>
+        
     </div>
-    <div class="row mb-3">
-        <div class="col-3">
-            <input type="text" placeholder="Search">
+    <div class="row mb-3 actionsRow">
+        <div class="col-4">
+            <input type="search" class="form-control" placeholder="Search for Properties">
         </div>
         <div class="col-3">
-            <button>Delete</button>
+            <button class="btn deleteBtn"><i class="fa-solid fa-trash-can"></i> Delete</button>
         </div>
     </div>
     <div class="row">
@@ -50,3 +56,52 @@
         </table>
     </div>
 </div>
+
+
+
+<ng-template #addSpacesModal let-modal>
+    <div class="modal-header">
+        <h1>Property Name</h1>
+    </div>
+    <div class="modal-body">
+        <div class="row">
+            <div class="col-4">
+
+            </div>
+            <div class="col-8">
+                <div class="row">
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Property Name</label>
+                            <input class="form-control" type="text" placeholder="placeholder">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="form-group">
+                            <label>Company Name</label>
+                            <input class="form-control" type="text" placeholder="placeholder">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col">
+                <input type="checkbox"> &nbsp;
+                <label>Additional Information</label>
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col">
+                <label>Short Description</label>
+                <input class="form-control" placeholder="Short Description">
+            </div>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-dark" (click)="modal.close()">Close</button>
+            <button class="btn btn-primary">Save Changes</button>
+    </div>
+</ng-template>
