--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -7,9 +7,16 @@
         margin: 20px;
         border-radius: 12px;
         background-size: cover;
+        // display: none for size less than md
+        @media (max-width: 992px){
+            display: none;
+        }
     }
     .content{
         width: 70%;
+        @media screen and (max-width:992px){
+            width: 100%;
+        }
     }
 }
 
