fix active classes

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -26,6 +26,7 @@
                     background: #AE864A;
                     border-radius: 69px;
                     color: #FFFFFF;
+                    padding: 10px;
                 }
             }
        }
