--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,8 +6,8 @@
             </div>
             <nav>
                 <ul>
-                    <li class="active" [ngClass]="{'nav-item': textVisible, 'nav-item-collapse':!textVisible}"  routerLinkActive="active" routerLink="/home">
-                        <a class="nav-link"><i class="fa-solid fa-key"></i> <span>Spaces</span></a>
+                    <li class="active" [ngClass]="{'nav-item': textVisible, 'nav-item-collapse':!textVisible}" routerLinkActive="active" >
+                        <a class="nav-link" routerLink="/home"><i class="fa-solid fa-key"></i> <span>Spaces</span></a>
                     </li>
                     <li [ngClass]="{'nav-item': textVisible, 'nav-item-collapse':!textVisible}" routerLinkActive="active">
                         <a class="nav-link"><i class="fa-solid fa-tag"></i> <span>Brands</span></a>
