--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -36,9 +36,10 @@
                 justify-content: start;
                 align-items: center;
                 font-size: 14px;
-                &:active{
-                    background-color: #ffff;
+                &.active{
                     color: #ae864a;
+                    border-left: 5px solid #ae864a;
+                    background-color: #fff;
                 }
                 a{
                     padding: 10px 0 10px 10px;
@@ -66,7 +67,7 @@
 
 .nav-menu-collapse {
     padding-right: 0;
-    max-width: 75px;
+    max-width: 85px;
     height: 100vh;
     background-color: #fafafa;
     position: fixed;
@@ -105,9 +106,11 @@
                 justify-content: start;
                 align-items: center;
                 font-size: 14px;
-                &:active{
+                &.active{
                     background-color: #ffff;
                     color: #ae864a;
+                    border-left: 5px solid #ae864a;
+                    background-color: #fff;
                 }
                 a{
                     padding: 10px 0 10px 0;
